# Unconsistent_structure_CSV_reader

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODO.md  pyproject.toml  uscsv_gui.spec
artifacts/: materialization_plan.json  workflow.mapping.analyze.column_profiles.json  workflow.mapping.analyze.header_clusters.json  workflow.materialization_plan.json  workflow.materialize.telemetry.jsonl
config/: defaults.json
docs/: backend_hardening_progress.md  data_sampling.md  materialization_writers_plan.md  schema_review_brief.md  ui_ux.md  workflow.md
docs/architecture/: job_lifecycle.md  resource_manager.md
input_data/: .gitkeep
output_data/: .gitkeep  mapping.normalized.json  zms_id_000.csv
output_data/workflow_run/: 1003887420_000.csv  1013071103_000.csv  1018295053_000.csv  1019856851_000.csv  1023615796_000.csv  1025797838_000.csv  1027468737_000.csv  (+832 more)
scripts/: bootstrap_env.ps1  bootstrap_env.sh  run_cli_smoke.ps1
storage/: canonical_schemas.json  synonyms.json
tests/: conftest.py  test_analysis_sampling.py  test_canonical_schema_contracts.py  test_cli.py  test_cli_header_clusters.py  test_column_profiler.py  test_config_loader.py  test_config_profiles.py  test_end_to_end_pipeline.py  test_gui_workflow.py  test_header_clustering.py  test_header_clusterizer.py  test_mapping_serialization.py  test_mapping_service.py  test_materialization_planner.py  test_materialization_runner.py  test_offset_detection.py  test_resource_manager.py  test_row_normalizer.py  test_sandbox.py  test_schema_mapping_offsets.py  test_sqlite_store.py  test_synonyms.py
(+57 files in other folders)
